--- a/RTMobile/RTMobile/issues/viewIssue/Attachments.xaml
+++ b/RTMobile/RTMobile/issues/viewIssue/Attachments.xaml
@@ -22,9 +22,9 @@
                       BackgroundColor="#4A4C50">
             <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="200"/>
-                    <RowDefinition Height="200"/>
-                    <RowDefinition Height="200"/>
+                    <RowDefinition Height="170"/>
+                    <RowDefinition Height="170"/>
+                    <RowDefinition Height="170"/>
                 </Grid.RowDefinitions>
                 <Frame Grid.Row="0" Grid.Column="0" HasShadow="True" CornerRadius="5"
                    BackgroundColor="#FFFFFF" Margin="10,10,10,10" Padding="10,10,10,0">
@@ -75,9 +75,9 @@
                                 </DataTemplate>
                             </CarouselView.ItemTemplate>
                         </CarouselView>
-                        <StackLayout x:Name="noneImage" BackgroundColor="#4A4C50" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                        <StackLayout x:Name="noneImage" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="0"  IsVisible="False">
                             <Label Text="Изображения отсутствуют" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" 
-                                   TextColor="#F0F1F0" FontSize="16" IsVisible="False" />
+                                   TextColor="#4A4C50" FontSize="16"/>
                         </StackLayout>
                     </StackLayout>
                 </Frame>
@@ -94,7 +94,7 @@
                         <CarouselView x:Name="carouselDocuments" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" PeekAreaInsets="100" HorizontalScrollBarVisibility="Always" >
                             <CarouselView.ItemTemplate>
                                 <DataTemplate>
-                                    <StackLayout HorizontalOptions="CenterAndExpand" WidthRequest="100">
+                                    <StackLayout HorizontalOptions="CenterAndExpand" WidthRequest="80">
                                         <StackLayout.GestureRecognizers>
                                             <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped_1"/>
                                         </StackLayout.GestureRecognizers>
@@ -124,7 +124,7 @@
                                                 </VisualState>
                                             </VisualStateGroup>
                                         </VisualStateManager.VisualStateGroups>
-                                        <Frame HorizontalOptions="Center" VerticalOptions="FillAndExpand" WidthRequest="100" HasShadow="True">
+                                        <Frame HorizontalOptions="Center" VerticalOptions="FillAndExpand" WidthRequest="80" HasShadow="True" >
                                             <Label Text="{Binding extension}" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
                                         </Frame>
                                         <Label Text="{Binding filename}" FontSize="10" HorizontalTextAlignment="Center" LineBreakMode="MiddleTruncation"/>
@@ -132,14 +132,14 @@
                                 </DataTemplate>
                             </CarouselView.ItemTemplate>
                         </CarouselView>
-                        <StackLayout x:Name="noneDocuments" BackgroundColor="#4A4C50" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                        <StackLayout x:Name="noneDocuments" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"  IsVisible="False" >
                             <Label Text="Документы отсутствуют" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" 
-                                   TextColor="#F0F1F0" FontSize="16" IsVisible="False"  />
+                                   TextColor="#4A4C50" FontSize="16" />
                         </StackLayout>
                     </StackLayout>
                 </Frame>
                 <Frame Grid.Row="2" Grid.Column="0" HasShadow="True" CornerRadius="5"
-                  BackgroundColor="#FFFFFF" Margin="10,0,10,10" Padding="10,0,10,0">
+                  BackgroundColor="#FFFFFF" Margin="10,0,10,10" Padding="10,10,10,0">
                     <StackLayout>
                         <StackLayout VerticalOptions="Center" HorizontalOptions="FillAndExpand" HeightRequest="20" Orientation="Horizontal">
                             <Image Source="folder.png" />
@@ -151,7 +151,7 @@
                         <CarouselView x:Name="carouselOthers" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" PeekAreaInsets="100" HorizontalScrollBarVisibility="Always" >
                             <CarouselView.ItemTemplate>
                                 <DataTemplate>
-                                    <StackLayout HorizontalOptions="CenterAndExpand" WidthRequest="100">
+                                    <StackLayout HorizontalOptions="CenterAndExpand" WidthRequest="80">
                                         <StackLayout.GestureRecognizers>
                                             <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped_2"/>
                                         </StackLayout.GestureRecognizers>
@@ -181,7 +181,7 @@
                                                 </VisualState>
                                             </VisualStateGroup>
                                         </VisualStateManager.VisualStateGroups>
-                                        <Frame HorizontalOptions="Center" VerticalOptions="FillAndExpand" WidthRequest="100" HasShadow="True">
+                                        <Frame HorizontalOptions="Center" VerticalOptions="FillAndExpand" WidthRequest="80" HasShadow="True">
                                             <Label Text="{Binding extension}" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
                                         </Frame>
                                         <Label Text="{Binding filename}" FontSize="10" HorizontalTextAlignment="Center" LineBreakMode="MiddleTruncation"/>
@@ -189,9 +189,9 @@
                                 </DataTemplate>
                             </CarouselView.ItemTemplate>
                         </CarouselView>
-                        <StackLayout x:Name="noneOthers" BackgroundColor="#4A4C50" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                        <StackLayout x:Name="noneOthers" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"  IsVisible="False" >
                             <Label Text="Файлы отсутствуют" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" 
-                                   TextColor="#F0F1F0" FontSize="16" IsVisible="False"  />
+                                   TextColor="#4A4C50" FontSize="16"/>
                         </StackLayout>
                     </StackLayout>
                 </Frame>
