--- a/RTMobile/RTMobile/issues/viewIssue/WorkJournal.xaml
+++ b/RTMobile/RTMobile/issues/viewIssue/WorkJournal.xaml
@@ -3,15 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RTMobile.issues.viewIssue.WorkJournal"
              Title="РАБОЧИЙ ЖУРНАЛ">
-    <ContentPage.Resources>
-        <ResourceDictionary>
-            <x:Array x:Key="histories" Type="{x:Type x:String}">
-                <x:String>iiii</x:String>
-                <x:String>qqq</x:String>
-                <x:String>rrrr</x:String>
-            </x:Array>
-        </ResourceDictionary>
-    </ContentPage.Resources>
 
     <ContentPage.ToolbarItems>
 
@@ -30,24 +21,27 @@
         <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
                       BackgroundColor="#4A4C50">
             <StackLayout HeightRequest="70" BackgroundColor="#323037">
-                <Label Text="IT-4926 - Создание мобильного приложения"
-                       TextColor="#F0F1F0" FontSize="16" VerticalOptions="CenterAndExpand"
-                       HorizontalOptions="CenterAndExpand"/>
+                <Label Text="{Binding Path=issueKeySummary}"
+                     TextColor="#F0F1F0" FontSize="16" VerticalOptions="CenterAndExpand"
+                     HorizontalOptions="CenterAndExpand" Margin="10,0,10,0" MaxLines="2" LineBreakMode="TailTruncation"/>
             </StackLayout>
-
 
             <ListView VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
                      BackgroundColor="#4A4C50" HasUnevenRows="True" SeparatorVisibility="None"
-                     ItemsSource="{StaticResource Key=histories}" ItemTapped="ListView_ItemTapped">
+                     ItemsSource="{Binding worklogs}" ItemTapped="ListView_ItemTapped">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
                             <ViewCell.View>
-                                <Frame CornerRadius="5" Margin="10" Padding="0" BackgroundColor="#FFFFFF">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
                                     <Grid>
                                         <Grid.RowDefinitions>
-                                            <RowDefinition Height="*"/>
-                                            <RowDefinition Height="Auto"/>
+                                            <RowDefinition Height ="Auto"/>
+                                            <RowDefinition Height ="Auto"/>
                                             <RowDefinition Height="25"/>
                                         </Grid.RowDefinitions>
                                         <Grid Padding="10,5,5,5" Margin="0" Grid.Row="0">
@@ -61,40 +55,37 @@
                                                 <RowDefinition Height="1"/>
                                             </Grid.RowDefinitions>
                                             <Frame Margin="0, 10, 0, 10" 
-                                               CornerRadius="50" IsClippedToBounds="True"
-                                               HorizontalOptions="Start" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalOptions="Start"
-                                               HasShadow="True" OutlineColor="Black" BackgroundColor="#FFFFFF">
-                                                <Image x:Name="imageReporter" Source ="sekisov.jpg" Aspect="Fill" Margin="-20"/>
+                                                   CornerRadius="50" IsClippedToBounds="True"
+                                                   HorizontalOptions="Start" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalOptions="Start"
+                                                   HasShadow="True" OutlineColor="Black" BackgroundColor="#FFFFFF">
+                                                <Image Source ="{Binding author.AvatarUrls.image}" Aspect="Fill" Margin="-20" HeightRequest="50"
+                                                       WidthRequest="50"/>
                                             </Frame>
 
-                                            <Label Grid.Column="1" Grid.Row="0" Text="Сексиов Владислав Александрович"
-                                                   FontSize="12" TextColor="#4A4C50" VerticalOptions="End"/>
-                                            <Label Grid.Column="1" Grid.Row="1" Text="Добавлена: 22.01.2020 17:56"
-                                                   FontSize="12" TextColor="#4A4C50" VerticalOptions="Start"/>
+                                            <Label Grid.Column="1" Grid.Row="0" Text ="{Binding Path=author.displayname}"
+                                                       FontSize="12" TextColor="#F0F1F0" VerticalOptions="End"/>
+                                            <StackLayout Orientation ="Horizontal" Grid.Column="1" HorizontalOptions="FillAndExpand" VerticalOptions="Start">
+                                                <Label Text="{Binding Path = created}"
+                                                       FontSize="12" TextColor="#F0F1F0" Grid.Column="1" Grid.Row="1" VerticalOptions="StartAndExpand"/>
+                                            </StackLayout>
 
                                             <BoxView BackgroundColor="#4A4C50" HeightRequest="1" 
-                                                 HorizontalOptions="FillAndExpand" Grid.Column="0" Margin="-5,0,0,0"
-                                                 Grid.Row="2" Grid.ColumnSpan="2" VerticalOptions="Start"/>
+                                                     HorizontalOptions="FillAndExpand" Grid.Column="0" Margin="-5,0,0,0"
+                                                     Grid.Row="2" Grid.ColumnSpan="2" VerticalOptions="Start"/>
                                         </Grid>
-                                        <Grid  Margin="10,0,10,0" VerticalOptions="Start"  HorizontalOptions="FillAndExpand"
-                                              Grid.Column="0" Grid.Row="1" Padding="0">
-                                            <Grid.RowDefinitions>
-                                                <RowDefinition Height="Auto"/>
-                                            </Grid.RowDefinitions>
-                                            <Label Text="Затраченное время" Grid.Column="0" Grid.Row="0"/>
-                                            <Label Text="Комментарий"  Grid.Column="0" Grid.Row="1"/>
+                                        <ScrollView Margin="10,0,10,0" VerticalOptions="StartAndExpand"
+                                                  HorizontalOptions="FillAndExpand" Grid.Column="0" Grid.Row="1" Padding="0" >
+                                            <Label VerticalOptions="Start" HorizontalOptions="Start" Text="{Binding Path=body}"
+                                                       Grid.Column="0" Grid.Row="0"  TextColor="#F0F1F0"/>
+                                        </ScrollView>
+                                        <ImageButton x:Name="showHistory" Source="arrowUp.png"  Grid.Column="0"
+                                                         BackgroundColor="Transparent"
+                                                         Grid.Row="2" HorizontalOptions="Center" VerticalOptions="End"
+                                                         Margin="0,0,0,10" Clicked="showHistory_Clicked"/>
 
-                                            <Label Text="30 минут" Grid.Column="1" Grid.Row="0" HorizontalOptions="EndAndExpand"/>
-                                            <ScrollView  Grid.Column="1" Grid.Row="1" Padding="0" Margin="0">
-                                                <Editor  IsReadOnly="True" FontSize="14" TextColor="#4A4C50"
-                                                         Text="Приложение постdsadasdadasdadasdasdsadasdasdasdроенопостdsadasdadasdadasdasdsadasdasdasdроенопостdsadasdadasdadasdasdsadasdasdasdроенопостdsadasdadasdadasdasdsadasdasdasdроенопостdsadasdadasdadasdasdsadasdasdasdроено dsadadsadassdasdaпо принципу"
-                                                    HorizontalOptions="EndAndExpand" VerticalOptions="Start"/>
-                                            </ScrollView>
-                                        </Grid>
-                                        <ImageButton x:Name="showHistory" Source="arrowUp.png"  Grid.Column="0" BackgroundColor="Transparent"
-                                                     Grid.Row="2" HorizontalOptions="Center" VerticalOptions="End" Margin="0,0,0,10" Clicked="showHistory_Clicked"/>
                                     </Grid>
-                                </Frame>
+
+                                </Grid>
                             </ViewCell.View>
                         </ViewCell>
                     </DataTemplate>
@@ -112,7 +103,7 @@
                         <ImageButton BackgroundColor="Transparent" Grid.Column="0" Grid.Row="0" Source="attachment.png" HorizontalOptions="Start" HeightRequest="25" Margin="5,0,0,0"/>
                         <Entry Grid.Column="1" Grid.Row="0" Placeholder="Введите текст комментария..." FontSize="14" Margin="-5,0,0,0"
                                PlaceholderColor="#4A4C50" TextColor="#4A4C50" HeightRequest="60" HorizontalOptions="FillAndExpand"/>
-                         <ImageButton BackgroundColor="Transparent" Grid.Column="2" Grid.Row="0" Source="arrowRightDark.png" HeightRequest="15" HorizontalOptions="End" Margin="0,0,10,0"/>
+                        <ImageButton BackgroundColor="Transparent" Grid.Column="2" Grid.Row="0" Source="arrowRightDark.png" HeightRequest="15" HorizontalOptions="End" Margin="0,0,10,0"/>
                     </Grid>
                 </Frame>
             </StackLayout>
