--- a/RTMobile/RTMobile/issues/CreateIssue.xaml
+++ b/RTMobile/RTMobile/issues/CreateIssue.xaml
@@ -9,13 +9,27 @@
             <Label x:Name="errorMessage" Text="Ошибка!" IsVisible="False" TextColor="#BE0030" FontSize="18" 
                    HorizontalOptions="Center" VerticalOptions="Start" Margin="20,10,20,0"/>
             <ScrollView HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                <StackLayout x:Name="generalStackLayout"  HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="20,10,20,0">
-                    <Label Text="Проект:"  FontSize="18" TextColor="#F0F1F0" />
-                    <Picker x:Name="projectPic" SelectedIndexChanged="Picker_SelectedIndexChanged" HorizontalOptions="FillAndExpand" VerticalOptions="Start"  FontSize="18" TextColor="#F0F1F0"/>
-                    <Label x:Name="lblTypeIssue" Text="Тип задач" IsVisible="False"  FontSize="18" TextColor="#F0F1F0"/>
-                    <Picker x:Name="typeIssuePic" IsVisible="False" HorizontalOptions="FillAndExpand" FontSize="18" TextColor="#F0F1F0" SelectedIndexChanged="typeIssuePic_SelectedIndexChanged"/>
-                </StackLayout>
+                <Grid Padding="10,0,10,0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                    </Grid.RowDefinitions>
+                    <StackLayout x:Name="generalStackLayout"  HorizontalOptions="FillAndExpand"  Margin="20,10,20,0" Grid.Row ="0">
+                        <Label Text="Проект:"  FontSize="18" TextColor="#F0F1F0" />
+                        <Picker x:Name="projectPic" SelectedIndexChanged="Picker_SelectedIndexChanged" HorizontalOptions="FillAndExpand" VerticalOptions="Start"  FontSize="18" TextColor="#F0F1F0"/>
+                        <Label x:Name="lblTypeIssue" Text="Тип задач" IsVisible="False"  FontSize="18" TextColor="#F0F1F0"/>
+                        <Picker x:Name="typeIssuePic" IsVisible="False" HorizontalOptions="FillAndExpand" FontSize="18" TextColor="#F0F1F0" SelectedIndexChanged="typeIssuePic_SelectedIndexChanged"/>
+                    </StackLayout>
+                    <BoxView HeightRequest="1" BackgroundColor="#F0F1F0" Grid.Row="1" IsVisible="False" x:Name="delimiter" HorizontalOptions="FillAndExpand"/>
+                    <Button x:Name="extended_button" Text="Показать необязательные поля" Clicked="button_show_necessarily" VerticalOptions ="StartAndExpand"  Grid.Row ="2" BackgroundColor="Transparent"
+                            TextColor="#F0F1F0" IsVisible="False" FontSize="16"/>
+                    <StackLayout IsVisible="False" x:Name="necessarily_fields" VerticalOptions="FillAndExpand" Grid.Row ="3">
+                    </StackLayout>
+                </Grid>
             </ScrollView>
+
             <Frame HasShadow="True" CornerRadius="3" BackgroundColor="#BE0030" WidthRequest="167"
                        HeightRequest="34" HorizontalOptions="FillAndExpand" Padding="0,5,0,5" Margin="20,0,20,20">
                 <Frame.GestureRecognizers>
