--- a/RTMobile/RTMobile/insight/objectList.xaml
+++ b/RTMobile/RTMobile/insight/objectList.xaml
@@ -20,7 +20,7 @@
             <ScrollView BackgroundColor="#4A4C50" VerticalOptions="FillAndExpand">
                 <ListView  Grid.Row="1" Grid.Column="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" 
                                    HasUnevenRows="True" SeparatorColor="#9B9CA0"
-                                   ItemsSource="{Binding insightObject}">
+                                   ItemsSource="{Binding insightObject}" ItemTapped="OpenField" >
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
@@ -31,7 +31,7 @@
                                             <ColumnDefinition Width="25"/>
                                         </Grid.ColumnDefinitions>
                                         <Label Grid.Row="0" Grid.Column="0" Text="{Binding Path=name}" TextColor="#F0F1F0" FontSize="14" FontAttributes="Bold" HorizontalOptions="FillAndExpand" />
-                                        <Image Grid.Row="0" Grid.Column="1"  Source="arrowRight.png"/>
+                                        <Image Grid.Row="0" Grid.Column="1"  Source="arrowRight.png" />
                                     </Grid>
                                 </ViewCell.View>
                             </ViewCell>
