--- a/RTMobile/RTMobile/issues/viewIssue/General.xaml
+++ b/RTMobile/RTMobile/issues/viewIssue/General.xaml
@@ -122,7 +122,7 @@
                                 </ViewCell>
                             </DataTemplate>
                         </ListView.ItemTemplate>
-                    </ListView>                    
+                    </ListView>
                     <ImageButton x:Name="showDate" Source="arrowUp.png"  Grid.Column="0" BackgroundColor="Transparent"
                                  Clicked="showDate_Clicked" Grid.Row="2" HorizontalOptions="Center" VerticalOptions="End" Margin="0,0,0,10"/>
                 </Grid>
@@ -158,8 +158,16 @@
                                 <ViewCell>
                                     <ViewCell.View>
                                         <Grid Margin="0" Padding="0">
-                                            <Label Grid.Column="0" Text="{Binding Path = name}"/>
-                                            <Label Grid.Column="1" Text="{Binding Path=value}" HorizontalOptions="EndAndExpand" Margin="0,0,10,0"/>
+                                            <Label Grid.Column="0" Text="{Binding Path = DisplayNameField}"/>
+                                            <Label Grid.Column="1"  HorizontalOptions="EndAndExpand" Margin="0,0,10,0">
+                                                <Label.FormattedText>
+                                                    <FormattedString>
+                                                        <Span Text="{Binding Path = value }"></Span>
+                                                        <Span Text=" "></Span>
+                                                        <Span Text="{Binding Path = Child.value }"></Span>
+                                                    </FormattedString>
+                                                </Label.FormattedText>
+                                            </Label>
                                         </Grid>
                                     </ViewCell.View>
                                 </ViewCell>
